tests/snapshots/test_adr_gates__accept_blocked_with_only_one_alternative.snap
---
source: tests/adr_gate_tests/accept.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr accept ADR-0001
error[E0303]: ADR alternatives incomplete: at least 2 alternatives required (found 1); at least 1 rejected alternative required. Use --force to bypass for historical backfills. (ADR-0001)
exit: 1
