tests/snapshots/test_adr_gates__accept_blocked_without_alternatives.snap
---
source: tests/adr_gate_tests/accept.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr accept ADR-0001
error[E0303]: ADR alternatives incomplete: at least 1 alternative required (found 0); at least 1 accepted alternative required. Use --force to bypass for historical backfills. (ADR-0001)
exit: 1
