tests/snapshots/test_adr_gates__accept_blocked_without_rejected_with_two_alternatives.snap
---
source: tests/adr_gate_tests/accept.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick accepted
Marked 'Option B' as accepted
exit: 0

$ govctl adr accept ADR-0001
error[E0303]: ADR alternatives incomplete: at least 1 rejected alternative required when 2 or more alternatives exist. Use --force to bypass for historical backfills. (ADR-0001)
exit: 1
