tests/snapshots/test_adr_gates__accept_force_bypasses_gates.snap
---
source: tests/adr_gate_tests/accept.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr accept ADR-0001 --force
Accepted ADR: ADR-0001
exit: 0

$ govctl adr list
[
  {
    "id": "ADR-0001",
    "status": "accepted",
    "date": "<DATE>",
    "title": "Test ADR"
  }
]
exit: 0
