tests/snapshots/test_adr_gates__set_decision_blocked_without_accepted.snap
---
source: tests/adr_gate_tests/decision.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick rejected
Marked 'Option A' as rejected
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick rejected
Marked 'Option B' as rejected
exit: 0

$ govctl adr edit ADR-0001 decision --set We chose A.
error[E0303]: ADR alternatives incomplete: at least 1 accepted alternative required. Use --force to bypass for historical backfills. (ADR-0001)
exit: 1
