tests/snapshots/test_adr_gates__set_decision_blocked_without_alternatives.snap
---
source: tests/adr_gate_tests/decision.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr edit ADR-0001 decision --set We chose X.
error[E0303]: ADR alternatives incomplete: at least 1 alternative required (found 0) (ADR-0001)
exit: 1
